# crystal-visor

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  test.py  test2.py
src/: compile_ui.py  main.py
src/camera/: __init__.py  camera_connection_settings.py  camera_device.py  camera_stream.py
src/core/: __init__.py  image_analysis.py  image_analyzer.py  time_table.py
src/core/math/: interpolation.py
src/modbus/: __init__.py  exceptions.py  register_map.py  register_reader.py  trm_control.py
src/modbus/abstracts/: client.py  connection.py  device.py
src/modbus/dataframes/: device_values.py  modbus_params.py  temperature_program.py
src/modbus/utils/dataframes/: __init__.py  device_values.py  modbus_params.py  temperature_program.py
src/modbus/utils/enums/: __init__.py  operating_mode.py
src/ui/dialogs/: config_dialog.py
src/ui/dialogs/resource/config_dialog/: config_dialog.ui  config_dialog_ui.py
src/ui/widgets/: __init__.py  control_panel.py  display_panel.py  project_widget.py  settings_panel.py
src/ui/widgets/old/: last_image.py  settings.py  temperature_control.py  timer_control.py
src/ui/widgets/old/last_image/: __init__.py  last_image.ui  last_image_ui.py
src/ui/widgets/old/settings/: __init__.py  settings.ui  settings_ui.py
src/ui/widgets/old/temperature_control/: __init__.py  modbus_control.ui  temperature_control.ui  temperature_control_ui.py
src/ui/widgets/old/timer_control/: __init__.py  timer_control.ui  (+1 more)
src/utils/: serial.py  timer.py
test/mock/: __init__.py  camera_mock.py  image_analysis_mock.py  trm_mock.py
(+9 files in other folders)
